WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
272276
REGRESSION(
277136@main
): [Win] ASSERTION FAILED: handlers.initState == SignalHandlers::InitState::Finalized
https://bugs.webkit.org/show_bug.cgi?id=272276
Summary
REGRESSION(277136@main): [Win] ASSERTION FAILED: handlers.initState == Signal...
Fujii Hironori
Reported
2024-04-06 01:09:21 PDT
After
277136@main
(
bug#271766
), Windows port is crashing. Buildbot: builder WinCairo-64-bit-Debug-Tests build 22263
https://build.webkit.org/#/builders/727/builds/22263
ASSERTION FAILED: handlers.initState == SignalHandlers::InitState::Finalized C:\BW\WinCairo-64-bit-Debug-Build\build\Source\WTF\wtf\win\SignalsWin.cpp(148) : finalize 1 00007FF9035F1CA9 WTFCrash 2 00007FF9035F48FC WTFCrashWithInfo 3 00007FF903779F51 WTF::SignalHandlers::finalize 4 00007FF9036FCEEE WTF::Config::finalize::<lambda_1>::operator() 5 00007FF9036FCED3 std::invoke<`lambda at C:\BW\WinCairo-64-bit-Debug-Build\build\Source\WTF\wtf\WTFConfig.cpp:134:26'> 6 00007FF9036FCC79 std::call_once<`lambda at C:\BW\WinCairo-64-bit-Debug-Build\build\Source\WTF\wtf\WTFConfig.cpp:134:26'> 7 00007FF9036FCBF4 WTF::Config::finalize 8 00007FF8E6491ADA JSC::Config::finalize 9 00007FF8E6480426 JSC::VM::VM 10 00007FF8E648181D JSC::VM::create 11 00007FF8DBF0DAF7 WebCore::commonVMSlow 12 00007FF8EBA342C4 WebCore::commonVM 13 00007FF8EBA242DD WebKit::WebProcess::initializeWebProcess 14 00007FF8EA9B9980 IPC::callMemberFunction<WebKit::WebProcess,WebKit::WebProcess,void (WebKit::WebProcessCreationParameters &&),std::tuple<WebKit::WebProcessCreationParameters> >::<lambda_1>::operator()<WebKit::WebProcessCreationParameters> 15 00007FF8EA9B992D std::invoke<`lambda at C:\BW\WinCairo-64-bit-Debug-Build\build\Source\WebKit\Platform\IPC\HandleMessage.h:134:9',WebKit::WebProcessCreationParameters> 16 00007FF8EA9B990A std::_Apply_impl<`lambda at C:\BW\WinCairo-64-bit-Debug-Build\build\Source\WebKit\Platform\IPC\HandleMessage.h:134:9',std::tuple<WebKit::WebProcessCreationParameters>,0> 17 00007FF8EA9B98D2 std::apply<`lambda at C:\BW\WinCairo-64-bit-Debug-Build\build\Source\WebKit\Platform\IPC\HandleMessage.h:134:9',std::tuple<WebKit::WebProcessCreationParameters> > 18 00007FF8EA9B7F8F IPC::callMemberFunction<WebKit::WebProcess,WebKit::WebProcess,void (WebKit::WebProcessCreationParameters &&),std::tuple<WebKit::WebProcessCreationParameters> > 19 00007FF8EA9B30AF IPC::handleMessage<Messages::WebProcess::InitializeWebProcess,WebKit::WebProcess,WebKit::WebProcess,void (WebKit::WebProcessCreationParameters &&)> 20 00007FF8EA9B135E WebKit::WebProcess::didReceiveWebProcessMessage 21 00007FF8EBA2638A WebKit::WebProcess::didReceiveMessage 22 00007FF8EB4CD21A IPC::Connection::dispatchMessage 23 00007FF8EB4CD492 IPC::Connection::dispatchMessage 24 00007FF8EB4CD79D IPC::Connection::dispatchOneIncomingMessage 25 00007FF8EB4D0EAB IPC::Connection::enqueueIncomingMessage::<lambda_6>::operator() 26 00007FF8EB4D0E47 WTF::Detail::CallableWrapper<`lambda at C:\BW\WinCairo-64-bit-Debug-Build\build\Source\WebKit\Platform\IPC\Connection.cpp:1229:31',void>::call 27 00007FF903609084 WTF::Function<void ()>::operator() 28 00007FF90368E1EA WTF::RunLoop::performWork 29 00007FF903778670 WTF::RunLoop::wndProc 30 00007FF9037785A7 WTF::RunLoop::RunLoopWndProc 31 00007FF901660089 CallWindowProcW
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2024-04-06 01:50:27 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26936
EWS
Comment 2
2024-04-06 01:55:05 PDT
Committed
277158@main
(ebabd60f9fc2): <
https://commits.webkit.org/277158@main
> Reviewed commits have been landed. Closing PR #26936 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-04-06 01:56:12 PDT
<
rdar://problem/126012313
>
Fujii Hironori
Comment 4
2024-04-17 22:24:33 PDT
277210@main
reverted
277136@main
.
277648@main
landed again. Reopen.
Fujii Hironori
Comment 5
2024-04-17 22:29:21 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27435
EWS
Comment 6
2024-04-17 22:40:56 PDT
Committed
277653@main
(803d6060e1d7): <
https://commits.webkit.org/277653@main
> Reviewed commits have been landed. Closing PR #27435 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug