REGRESSION(277136@main): [Win] ASSERTION FAILED: handlers.initState == SignalHandlers::InitState::Finalized https://bugs.webkit.org/show_bug.cgi?id=272276

Unreviewed crash fix for Windows port.

* Source/WTF/wtf/win/SignalsWin.cpp:
Fixed a wrong RELEASE_ASSERT condition.

Canonical link: https://commits.webkit.org/277158@main